--- a/packages/store/src/index.css
+++ b/packages/store/src/index.css
@@ -10,10 +10,13 @@ body {
 }
 
 .line-clamp-2 {
+  overflow: hidden;
+  
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  overflow: hidden;
+  
+  line-clamp: 2;
 }
 
 /* Smooth scrolling */
